--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/types": "^7.2.21",
     "dayjs": "^1.11.13",
